# sampleride

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
api/: classes.cpp  classes.h  enums.h
mainwindow/: mainwindow.cpp  mainwindow.h
model/: model.cpp  model.h
module/: manager.cpp  manager.h  module.cpp  module.h
preview/: preview.cpp  preview.h
renderer/: renderer.cpp  renderer.h
resources/: style.h
sequence/: action.cpp  action.h  sequence.cpp  sequence.h
server/: server.cpp  server.h
state/: state.cpp  state.h
